[package]
authors = ["MikiAlex <18516340862@163.com>"]
edition = "2021"
name = "viewer"
version = "0.1.0"

[dependencies]
bytemuck = {version = "1.4.1", features = ["derive"]}
env_logger = "0.8.4"
futures = "0.3.15"
image = "*"
incremental = {path = "../utils/incremental"}
interphaser = {path = "../interphaser"}
log = "0.4"
rendiation-algebra = {path = "../math/algebra"}
rendiation-controller = {path = "../components/controller"}
rendiation-generative-texture = {path = "../components/texture/generative"}
rendiation-geometry = {path = "../math/geometry"}
rendiation-mesh-generator = {path = "../components/mesh/generator"}
rendiation-renderable-mesh = {path = "../components/mesh/renderable", features = ["webgpu"]}
rendiation-scene-core = {path = "../scene/core"}
rendiation-scene-gltf-loader = {path = "../scene/io/gltf/loader"}
rendiation-scene-webgpu = {path = "../scene/webgpu"}
rendiation-texture = {path = "../components/texture/core", features = ["webgpu"]}
rfd = "0.10.0"
shadergraph = {path = "../shader/graph"}
webgpu = {package = "rendiation-webgpu", path = "../webgpu"}
wgsl-shader-derives = {path = "../shader/language/wgsl/derive"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen-futures = "0.4.28"

[features]
webgl = ["webgpu/webgl"]
