[package]
authors = ["MikiAlex <18516340862@163.com>"]
edition = "2021"
name = "viewer"
version = "0.1.0"

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
env_logger = "0.8.4"
futures = { workspace = true, features = ["thread-pool"] }

dirs = "4.0.0"
image = "*"
png = "*"      # for better control over writing

fast-hash-collection = { path = "../utils/fast-hash-collection" }
heap-tools = { path = "../utils/heap-tools" }
incremental = { path = "../utils/incremental" }
interphaser = { path = "../interphaser" }
log = { workspace = true }
pin-project = { workspace = true }
rayon = { workspace = true }
reactive = { path = "../utils/reactive" }
rendiation-algebra = { path = "../math/algebra" }
rendiation-controller = { path = "../components/controller" }
rendiation-generative-texture = { path = "../components/texture/generative" }
rendiation-texture-gpu-process = { path = "../components/texture/gpu-process" }
rendiation-geometry = { path = "../math/geometry" }
rendiation-mesh-core = { path = "../components/mesh/core" }
rendiation-mesh-generator = { path = "../components/mesh/generator" }
rendiation-scene-core = { path = "../scene/core" }
rendiation-scene-gltf-exporter = { path = "../scene/io/gltf/exporter" }
rendiation-scene-gltf-loader = { path = "../scene/io/gltf/loader" }
rendiation-scene-interaction = { path = "../scene/interaction" }
rendiation-scene-obj-loader = { path = "../scene/io/obj/loader" }
rendiation-scene-webgpu = { path = "../scene/webgpu" }
rendiation-shader-api = { path = "../shader/api" }
rendiation-texture = { path = "../components/texture/core" }
interning = { path = "../utils/interning" }
rfd = "0.10.0"
webgpu = { package = "rendiation-webgpu", path = "../platform/graphics/webgpu" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen-futures = "0.4.28"

[features]
heap-debug = ["heap-tools/enabled"]
webgl = ["webgpu/webgl"]

[lints]
workspace = true
