[package]
authors = ["mikialex <18516340862@163.com>"]
edition = "2018"
name = "voxland"
version = "0.1.0"

[features]
default = ["webgpu"]
webgpu = []

[dependencies]
env_logger = "0.7"
futures = "0.3"
image = "*"
noise = "0.6"
serde = {version = "1.0.105", features = ["derive"]}
tokio = {version = "0.2", features = ["full"]}
winit = "0.22.2"

rendiation-algebra = {path = "../math/algebra"}
rendiation-geometry = {path = "../math/geometry"}
rendiation-renderable-mesh = {path = "../mesh/renderable"}
rendiation-webgl = {path = "../ral/backend/webgl"}
rendiation-webgpu = {path = "../ral/backend/webgpu", features = ["shadergraph", "glsl-to-spirv"]}

rendiation-rendergraph = {path = "../render-graph", features = ["webgpu"]}
rendiation-scenegraph = {path = "../scene", features = ["rendergraph", "webgpu"]}

arena = {path = "../utils/arena"}
once_cell = "1.4.0"
rendiation-derives = {path = "../derives"}
rendiation-ral = {path = "../ral/core"}
rendiation-shader-library = {path = "../shader-library", features = ["webgpu"]}
rendiation-shadergraph = {path = "../shader-graph"}
