[package]
authors = ["mikialex <18516340862@163.com>"]
edition = "2018"
name = "rendiation-webgl"
version = "0.1.0"

[dependencies]
js-sys = "0.3.45"
wasm-bindgen = {version = "0.2.68"}

rendiation-math = {path = "../math"}
rendiation-ral = {path = "../ral"}
rendiation-shadergraph = {path = "../shader-graph"}

[dependencies.web-sys]
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlUniformLocation',
  'WebGlShader',
  'WebGlTexture',
  'WebGlFramebuffer',
  'Window',
]
version = "0.3.39"
