[package]
authors = ["MikiAlex <18516340862@163.com>"]
edition = "2018"
name = "rendiation-webgpu"
version = "0.1.0"

[dependencies]
bytemuck = {version = "1.4.1", features = ["derive"]}
rendiation-texture-types = {path = "../components/texture/types"}
typed-arena = "2.0.1"
wgpu = {version = "0.11", features=["trace"]}
winit = {version = "0.24.0"}
