[package]
authors = ["MikiAlex <18516340862@163.com>"]
edition = "2021"
name = "rendiation-webgpu"
version = "0.1.0"

[dependencies]
bytemuck = {version = "1.4.1", features = ["derive"]}
rendiation-texture-types = {path = "../components/texture/types"}
typed-arena = "2.0.1"
wgpu = "0.12.0"
winit = {version = "0.26.0"}
