[package]
authors = ["MikiAlex <miikiialexx@gmail.com>"]
edition = "2021"
name = "viewer-content-api"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]


[dependencies]
env_logger = { workspace = true }
futures = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
fast-hash-collection = { path = "../../utility/fast-hash-collection" }
rendiation-viewer-content = { path = "../viewer-content" }

# these dep declare are necessary as we are export c type from them
rendiation-mesh-core = { path = "../../content/mesh/core" }
rendiation-occ-style-draw-control = { path = "../../extension/occ-style-draw-control" }
rendiation-text-3d = { path = "../../extension/text-3d" }

[build-dependencies]
cbindgen = "0.29.2"

[features]
extra-checks = ["rendiation-viewer-content/extra-checks"]

[lints]
workspace = true
