[package]
authors = ["MikiAlex <18516340862@163.com>"]
edition = "2021"
name = "viewer"
version = "0.1.0"

[dependencies]
bytemuck = { workspace = true }
env_logger = "0.8.4"
futures = { workspace = true, features = ["thread-pool"] }

database = { path = "../../utility/database" }
dirs = "4.0.0"
parking_lot = { workspace = true }
fast-hash-collection = { path = "../../utility/fast-hash-collection" }
heap-tools = { path = "../../utility/heap-tools" }
image = "*"
serde = { workspace = true }
facet = { workspace = true }
log = { workspace = true }
pin-project = { workspace = true }
png = "*"
pollster = { workspace = true }
rayon = { workspace = true }
reactive = { path = "../../utility/reactive" }
rendiation-animation = { path = "../../content/animation" }
rendiation-algebra = { path = "../../math/algebra" }
rendiation-controller = { path = "../../extension/controller" }
rendiation-device-ray-tracing = { path = "../../shader/ray-tracing" }
rendiation-geometry = { path = "../../math/geometry" }
rendiation-gizmo = { path = "../../extension/gizmo" }
rendiation-gui-3d = { path = "../../extension/gui-3d" }
rendiation-infinity-primitive = { path = "../../extension/infinity-primitive" }
rendiation-lighting-gpu-system = { path = "../../content/lighting/gpu-system/lighting-system" }
rendiation-lighting-transport = { path = "../../content/lighting/transport" }
rendiation-lighting-ibl = { path = "../../content/lighting/ibl" }
rendiation-lighting-shadow-map = { path = "../../content/lighting/gpu-system/shadow-map" }
rendiation-lighting-punctual = { path = "../../content/lighting/punctual" }
rendiation-mesh-core = { path = "../../content/mesh/core" }
rendiation-mesh-generator = { path = "../../content/mesh/generator" }
rendiation-scene-core = { path = "../../scene/core" }
rendiation-scene-geometry-query = { path = "../../scene/geometry-query" }
rendiation-scene-gltf-exporter = { path = "../../scene/io/gltf/exporter" }
rendiation-scene-gltf-loader = { path = "../../scene/io/gltf/loader" }
rendiation-scene-obj-loader = { path = "../../scene/io/obj/loader" }
rendiation-scene-rendering-gpu-gles = { path = "../../scene/rendering/gpu-gles" }
rendiation-scene-rendering-gpu-indirect = { path = "../../scene/rendering/gpu-indirect" }
rendiation-scene-rendering-gpu-ray-tracing = { path = "../../scene/rendering/gpu-ray-tracing" }
rendiation-occlusion-culling = { path = "../../scene/rendering/occlusion-culling" }
rendiation-oit = { path = "../../scene/rendering/oit" }
rendiation-shader-api = { path = "../../shader/api" }
rendiation-shader-library = { path = "../../shader/library" }
rendiation-fast-down-sampling-2d = { path = "../../shader/fast-down-sampling-2d" }
rendiation-texture-core = { path = "../../content/texture/core" }
rendiation-texture-gpu-base = { path = "../../content/texture/gpu-base" }
rendiation-texture-gpu-process = { path = "../../content/texture/gpu-process" }
rendiation-texture-loader = { path = "../../content/texture/loader" }
rendiation-webgpu = { path = "../../platform/graphics/webgpu" }
rendiation-state-override = { path = "../../extension/state-override" }
rendiation-area-lighting = { path = "../../extension/area-lighting" }
rendiation-webgpu-reactive-utils = { path = "../../platform/graphics/webgpu-reactive-utils" }
rfd = "0.14.0"
tracing = { workspace = true }
tracing-subscriber = "0.3.19"
tracing-tracy = { version = "0.11.4", optional = true }

egui = { git = "https://github.com/emilk/egui.git", rev = "98add13933d55cbe1fa23e2b6af62f117145d368" }
egui-wgpu = { git = "https://github.com/emilk/egui.git", rev = "98add13933d55cbe1fa23e2b6af62f117145d368" }
egui-winit = { git = "https://github.com/emilk/egui.git", rev = "98add13933d55cbe1fa23e2b6af62f117145d368" }
egui_extras = { git = "https://github.com/emilk/egui.git", rev = "98add13933d55cbe1fa23e2b6af62f117145d368" }

winit = { workspace = true }


[features]
default = ["heap-debug"]
heap-debug = ["heap-tools/enabled"]
webgl = ["rendiation-webgpu/webgl"]
tracy = ["dep:tracing-tracy"]
tracy-heap-debug = ["tracy"]

[lints]
workspace = true
