[package]
authors = ["mikialex <18516340862@163.com>"]
edition = "2021"
name = "rendiation-canvas"
version = "0.1.0"

[dependencies]
bytemuck = "1.4.1"
fontext = {path = "../fontext"}
rendiation-algebra = {path = "../../math/algebra"}
rendiation-color = {path = "../color"}
rendiation-geometry = {path = "../../math/geometry"}
